	of lwnetrouter.conf(5).
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'FullDelay=' parameter to the [Input<n>] section
	of lwnetrouter.conf(5).
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a protocol driver for Software Authority protocol in
	'src/lwnetrouterd/protocol_sap.cpp' and
	'src/lwnetrouterd/protocol_sap.h'.
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2016-12-03 Fred Gleason <fredg@paravelsystems.com>
	* Implemented button lamp feedback for the GPIO delay controls.
2016-12-03 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/lwnetdelay/lwnetdelay.cpp that broke title
	bar display.
2016-12-03 Fred Gleason <fredg@paravelsystems.com>
	* Rearranged the order of the controls on the Delay Control widget
	to match that of Element control surfaces.
2016-12-03 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/lwnetrouterd/lwnetrouterd.cpp' that caused
	the first tenths of a second of audio to fail to be dumped.
2016-12-04 Fred Gleason <fredg@paravelsystems.com>
	* Added support for incremental dumping.
2016-12-04 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/lwnetrouterd/protocol_gpio.cpp' to illuminate the
	'Dump' button whenever there is at least 'DumpDelay' time on the
	delay.
2016-12-04 Fred Gleason <fredg@paravelsystems.com>
	* Refactored 'PushButton' widget in 'src/lwnetdelay/pushbutton.cpp'
	and 'src/lwnetdelay/pushbutton.h' to support multiple display states.
	* Modified lwnetdelay(1) delay button control display states to match
	those of the 'ProtocolGpio' interface.
2016-12-04 Fred Gleason <fredg@paravelsystems.com>
	* Made the 'Dump' button in lwnetdelay(1) do fast flash after a dump.
2016-12-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/lwnetrouterd/router_hpiaudio.cpp' that caused
	delay exiting to freeze after processing a Dump while in Exiting
	mode.